--- a/front/src/components/Header.astro
+++ b/front/src/components/Header.astro
@@ -19,12 +19,14 @@ import { SITE_TITLE } from "../consts";
         background: var(--bg-color1);
         color: var(--fg-color1);
     }
+
     nav {
         width: 1024px;
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
+
     h2 {
         margin: 0;
         font-size: 1.2rem;
@@ -34,12 +36,13 @@ import { SITE_TITLE } from "../consts";
         color: var(--fg-color1);
         text-decoration: none;
     }
+
     nav h2 a:hover {
         color: var(--accent2);
         text-decoration: underline;
     }
 
-    @media (max-width: 720px) {
+    @media (width <= 720px) {
         header {
             padding: 0.5rem 1rem;
         }
