--- a/front/src/layouts/Post.astro
+++ b/front/src/layouts/Post.astro
@@ -19,15 +19,18 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
                 max-width: 100%;
                 margin: 0;
             }
+
             .hero-image {
                 width: 100%;
             }
+
             .hero-image img {
                 display: block;
                 margin: 0 auto;
                 border-radius: 12px;
                 box-shadow: var(--box-shadow);
             }
+
             .prose {
                 width: 720px;
                 max-width: calc(100% - 2rem);
@@ -35,19 +38,23 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
                 padding: 1rem;
                 color: var(--fg-color3);
             }
+
             .title {
                 margin-bottom: 1rem;
                 padding: 1rem 0;
                 text-align: center;
                 line-height: 1;
             }
+
             .title h1 {
-                margin: 0 0 0.5rem 0;
+                margin: 0 0 0.5rem;
             }
+
             .date {
                 margin-bottom: 0.5rem;
                 color: var(--fg-color2);
             }
+
             .last-updated-on {
                 font-style: italic;
             }
