--- a/front/src/components/BaseHead.astro
+++ b/front/src/components/BaseHead.astro
@@ -11,7 +11,11 @@ interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description } = Astro.props;
+const {
+    title,
+    description,
+    image = "/background_switzerland.jpeg",
+} = Astro.props;
 ---
 
 <!-- Global Metadata -->
@@ -54,11 +58,11 @@ const { title, description } = Astro.props;
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<!-- <meta property="og:image" content={new URL(image, Astro.url)} /> -->
+<meta property="og:image" content={new URL(image, Astro.url)} />
 
 <!-- Twitter -->
-<!-- <meta property="twitter:card" content="summary_large_image" /> -->
+<meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<!-- <meta property="twitter:image" content={new URL(image, Astro.url)} /> -->
+<meta property="twitter:image" content={new URL(image, Astro.url)} />
