--- a/front/src/components/Header.astro
+++ b/front/src/components/Header.astro
@@ -21,7 +21,7 @@ import { SITE_TITLE } from "../consts";
     }
 
     nav {
-        width: 1024px;
+        width: 1280px;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -42,7 +42,7 @@ import { SITE_TITLE } from "../consts";
         text-decoration: underline;
     }
 
-    @media (width <= 720px) {
+    @media (width < 1024px) {
         header {
             padding: 0.5rem 1rem;
         }
