--- a/front/src/pages/index.astro
+++ b/front/src/pages/index.astro
@@ -2,45 +2,95 @@
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import { SITE_TITLE, SITE_DESCRIPTION, SITE_IMAGE } from "../consts";
 ---
 
 <!doctype html>
 <html lang="en">
     <head>
-        <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+        <BaseHead
+            title={SITE_TITLE}
+            description={SITE_DESCRIPTION}
+            image={SITE_IMAGE}
+        />
     </head>
     <body>
         <Header />
         <main>
-            <h1>&gt;hi</h1>
-            <p class="unselectable">+++</p>
-            <p>
-                name = Ignacy Radlinski<br />
-                position = Software Engineer @ u-blox<br />
-                github = <a href="https://github.com/radlinskii" target="_blank"
-                    >https://github.com/radlinskii</a
-                ><br />
-                linkedin = <a
-                    href="https://www.linkedin.com/in/ignacy-radlinski"
-                    target="_blank"
-                    >https://www.linkedin.com/in/ignacy-radlinski</a
-                >
-            </p>
-            <p class="unselectable">+++</p>
-            <p>
-                At some point, maybe I'll add something to
-                <a href="/posts" style="pointer-events: none">/posts</a><br />
-                ...something about ergonomic keyboards, configuring NeoVim,<br
+            <div class="text-container">
+                <h1>&gt;hi</h1>
+                <p class="unselectable">+++</p>
+                <p>
+                    name = Ignacy Radlinski<br />
+                    position = Software Engineer @ u-blox<br />
+                    github = <a
+                        href="https://github.com/radlinskii"
+                        target="_blank">https://github.com/radlinskii</a
+                    ><br />
+                    linkedin = <a
+                        href="https://www.linkedin.com/in/ignacy-radlinski"
+                        target="_blank"
+                        >https://www.linkedin.com/in/ignacy-radlinski</a
+                    >
+                </p>
+                <p class="unselectable">+++</p>
+                <p>
+                    At some point, maybe I'll add something to
+                    <a href="/posts" style="pointer-events: none">/posts</a><br
+                    />
+                    ...something about ergonomic keyboards, configuring NeoVim,<br
+                    />
+                    other tools from my development environment,<br />
+                    how I built this website and some of my other side projects,<br
+                    />
+                    programming in general, hiking in Switzerland,<br />
+                    swimming, ornithology,<br />
+                    or other things I'm interested in.<br />
+                </p>
+                <p class="show-on-mobile unselectable">+++</p>
+            </div>
+            <div class="image-container">
+                <img
+                    src="/public/background_switzerland.jpeg"
+                    alt="Ignacy Radliński hiking somewhere in Switzerland"
                 />
-                other tools from my development environment,<br />
-                how I built this website and some of my other side projects,<br
-                />
-                programming in general, hiking in Switzerland,<br />
-                swimming, ornithology,<br />
-                or other things I'm interested in.<br />
-            </p>
+            </div>
         </main>
         <Footer />
     </body>
 </html>
+
+<style>
+    .image-container {
+        max-width: 720px;
+        padding-top: 16px;
+    }
+
+    @media screen and (min-width: 1024px) {
+        main {
+            width: 1024px;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+        }
+
+        .text-container {
+            width: 720px;
+        }
+
+        .image-container {
+            width: 400px;
+            padding-bottom: 16px;
+        }
+    }
+
+    @media screen and (min-width: 1280px) {
+        main {
+            width: 1280px;
+        }
+
+        .image-container {
+            width: 498px;
+        }
+    }
+</style>
