--- a/front/src/components/BaseHead.astro
+++ b/front/src/components/BaseHead.astro
@@ -14,7 +14,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const {
     title,
     description,
-    image = "/background_switzerland.jpeg",
+    image = "/background_switzerland_1200w.jpeg",
 } = Astro.props;
 ---
 
@@ -57,7 +57,10 @@ const {
 <meta property="og:type" content="website" />
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
+<meta property="og:site_name" content={title} />
 <meta property="og:description" content={description} />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="1200" />
 <meta property="og:image" content={new URL(image, Astro.url)} />
 
 <!-- Twitter -->
