update home page description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,11 +41,11 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_IMAGE } from "../consts";
                         ><br />
                         ...something about ergonomic keyboards, configuring NeoVim,<br
                         />
-                        other tools from my development environment,<br />
+                        or other tools from my development environment,<br />
                         how I built this website and some of my other side projects,<br
                         />
                         programming in general, hiking in Switzerland,<br />
-                        swimming, ornithology,<br />
+                        swimming, ornithology, bread baking,<br />
                         or other things I'm interested in.<br />
                     </p>
                     <p class="show-on-mobile unselectable">+++</p>
