fix: fix home page link in header

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_IMAGE } from "../consts";
     <head>
         <BaseHead
             title={SITE_TITLE}
+            siteName={SITE_TITLE}
             description={SITE_DESCRIPTION}
             image={SITE_IMAGE}
         />
@@ -22,7 +23,7 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_IMAGE } from "../consts";
                     <h1>&gt;hi</h1>
                     <p class="unselectable">+++</p>
                     <p>
-                        name = Ignacy Radlinski<br />
+                        name = Ignacy Radliński<br />
                         position = Software Engineer @ u-blox<br />
                         github = <a
                             href="https://github.com/radlinskii"
