--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -6,16 +6,13 @@ import "../styles/global.scss";
 interface Props {
     title: string;
     description: string;
-    image?: string;
+    siteName: string;
+    image: string;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const {
-    title,
-    description,
-    image = "/background_switzerland_1200w.jpeg",
-} = Astro.props;
+const { title, description, siteName, image } = Astro.props;
 ---
 
 <!-- Global Metadata -->
@@ -57,7 +54,7 @@ const {
 <meta property="og:type" content="website" />
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
-<meta property="og:site_name" content={title} />
+<meta property="og:site_name" content={siteName} />
 <meta property="og:description" content={description} />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="1200" />
